# ChangeLog for dev-util/fossil
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Nov 2009; James Rowe <jnrowe@gmail.com> fossil-0.20090921191920.ebuild:
  Keyworded amd64.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> fossil-0.20090921191920.ebuild:
  Keyworded x86.

  07 Oct 2009; James Rowe <jnrowe@gmail.com> fossil-0.20090921191920.ebuild:
  Keyworded ~x86.

*fossil-0.20090921191920 (07 Oct 2009)

  07 Oct 2009; James Rowe <jnrowe@gmail.com>
  +fossil-0.20090921191920.ebuild, +metadata.xml:
  Initial ebuild, by me.
