@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST fossil-src-20090921191920.tar.gz 1793015 RMD160 f5c24e359ee9731d1f661b33e1bea6f42ddb7645 SHA1 331bb42290c17051683da07878326e63e1c8b275 SHA256 a6e29fb13460f8ef683ad8ec09db9c4ce801e6797ecdfd4024b1403e4fe5eb8e
+DIST fossil-src-20091111162119.tar.gz 1819605 RMD160 530fd2920aec17876f63f497698d0e4bf46d67ff SHA1 0f547eb40b3985228555ff343a685d2c3e2550a7 SHA256 63e74abba47ba2474f37f2954262a2917c7764527728685d6bd2044ff32be74f
 EBUILD fossil-0.20090921191920.ebuild 627 RMD160 ccc437cf5a4a119cf0e1fd664eccb3da10fc18de SHA1 2d690639a4cf90600fbcc521ceb37775ca0bcbae SHA256 7c5c89d8207806c8200179841181c138a3f1afdef81b1285864c08de66acf7ae
-MISC ChangeLog 565 RMD160 f1b5a40363ca98934a02fed0f6ccbc830a69d115 SHA1 efc0b1f76edbddf1667f194921a99c985c240cc7 SHA256 5f6d77668118d48a1c93f688ee9032e43542880abea136966eed19a27393a86b
+EBUILD fossil-0.20091111162119.ebuild 629 RMD160 cdae08be36668159e203ca4e940ae800327217d6 SHA1 fc468641c2b6bdacc7e716e88f237a4502d130f8 SHA256 f2a75b29c0a66db615fe1d5de7834e26b3b1b1d0ba9f4fcbb2c0f49b1d21571a
+MISC ChangeLog 708 RMD160 792a1ad271f935c2d08ef93c2b4875d73974f450 SHA1 d3403a381989e7663467af190303887a5802e71f SHA256 e972da4c1e97ba3361e95fe42a37b301dc9025519a2f569b4364f409a161cb8b
 MISC metadata.xml 2462 RMD160 4add55c2d684ddb9ca7d6011bc1b4871c0b33f6b SHA1 7b9285e40f0370feba027448f8a981a016b96019 SHA256 765909eb48cb3eef9662931649bd25bc04d4077eb760d2c9792b155ec1c68fd9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkr7lnYACgkQzJrj3cAXR0mMzACgjayJ+XBkMeve3wKhS19ZDZFy
-AeAAoIJbcfGofVVWXmO0uaZyJ4FvaKFk
-=WnwM
+iEYEARECAAYFAksKewcACgkQzJrj3cAXR0koZACcDI9NPmvKArpatxdRLVpmeuX0
+ga8AoKoeBTC/bKZQPMl5B5/SybGjU7QA
+=DsM+
 -----END PGP SIGNATURE-----
