@@ -1,0 +1,22 @@
+test? ( dev-lang/tcl )
+
+0
+http://www.fossil-scm.org/download/fossil-src-20091111162119.tar.gz
+
+http://www.fossil-scm.org/index.html/doc/tip/www/index.wiki
+GPL-2
+Simple, high-reliability, distributed software configuration management
+~amd64 ~x86
+versionator
+test
+
+
+
+2
+
+install prepare
+
+
+
+
+
